[gd_scene load_steps=5 format=3 uid="uid://bcm4y31o2tn2a"]

[ext_resource type="Texture2D" uid="uid://r56y1l23fw5f" path="res://assets/tiles/dirt-tile-Sheet.png" id="1_m6ivm"]
[ext_resource type="Script" path="res://scenes/forageables/dirt_block.gd" id="2_esr1g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ailm3"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r7qtp"]
size = Vector2(16, 14)

[node name="DirtBlock" type="Sprite2D"]
texture = ExtResource("1_m6ivm")
script = ExtResource("2_esr1g")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_ailm3")

[node name="SeedDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="SeedDetectorShape" type="CollisionShape2D" parent="SeedDetector"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_r7qtp")
debug_color = Color(0.482353, 0.576471, 0.321569, 0.419608)

[node name="TreeSpawnMarker" type="Marker2D" parent="."]
position = Vector2(0, -7)

[connection signal="body_entered" from="SeedDetector" to="." method="_on_seed_detector_body_entered"]
